# cmake-cpp-project

./: CMakeLists.txt  LICENSE  README.md
include/cmake-cpp-project/: app.h
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: math.h
libs/utils/src/: math.cpp
libs/utils/tests/: CMakeLists.txt  math_tests.cpp
src/: app.cpp  main.cpp
